[fix]日報のテキストにスクロールバーを追加 画面ごとスクロールかテキスト部のみスクロールか要検討

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -113,6 +113,7 @@
             android:hint="本文を入力"
             android:inputType="textMultiLine"
             android:padding="8dp"
+            android:scrollbars="vertical"
             android:singleLine="false"
             android:textAlignment="textStart" />
 
