--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
 
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar_writer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:background="@color/theme_main_Green"
+            android:elevation="4dp"
+            android:theme="?attr/actionBarSplitStyle"
+            app:popupTheme="@style/Base.ThemeOverlay.AppCompat.Light"
+            app:title="@string/app_name" />
+
         <LinearLayout
             android:id="@+id/DateLayout"
             android:layout_width="match_parent"
@@ -32,9 +43,8 @@
 
             <TextView
                 android:id="@+id/dateTextView"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:padding="8dp"
                 android:text="12/24"
                 android:textSize="18sp" />
@@ -58,9 +68,8 @@
 
             <TextView
                 android:id="@+id/writerTextView"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:padding="8dp"
                 android:text="僕だ！！！"
                 android:textSize="18sp" />
