--- a/app/src/main/res/layout/activity_writer.xml
+++ b/app/src/main/res/layout/activity_writer.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".WriterActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,7 +23,7 @@
             android:layout_weight="0"
             android:background="@color/theme_main_Green"
             android:elevation="4dp"
-            android:theme="?attr/actionBarSplitStyle"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             app:popupTheme="@style/Base.ThemeOverlay.AppCompat.Light"
             app:title="@string/app_name" />
 
