[update]発表会用に急遽作成 最低限の仕様のみ実装して動作するように修正 ・設定ボタンと送信ボタンはトースト表示のみ ・日付と名前はデフォルトのみで変化しない ・ID=foo@example.com:パスワード=hello

--- a/app/src/main/res/layout/activity_add_report.xml
+++ b/app/src/main/res/layout/activity_add_report.xml
@@ -8,8 +8,8 @@
     tools:context=".AddReportActivity">
 
     <android.support.design.widget.AppBarLayout
-        android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
@@ -17,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/theme_main_Green"
+            android:theme="@style/Theme.AppCompat.Light"
             app:popupTheme="@style/Base.ThemeOverlay.AppCompat.Light" />
 
     </android.support.design.widget.AppBarLayout>
