--- a/app/src/main/res/layout/activity_calender.xml
+++ b/app/src/main/res/layout/activity_calender.xml
@@ -9,42 +9,65 @@ android:orientation="vertical"
 android:background="@color/grayColor"
 tools:context=".CalenderActivity">
 
-<android.support.constraint.ConstraintLayout
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/theme_main_Green"
+        android:theme="@style/Theme.AppCompat.Light"
+        app:popupTheme="@style/Base.ThemeOverlay.AppCompat.Light" />
+
+    <android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_weight="2"
     android:background="@color/whiteColor">
 
-    <TextView
-        android:id="@+id/titleText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/Month"
-        android:textSize="20sp"
-        tools:layout_constraintTop_creator="1" tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="parent" android:layout_marginTop="17dp"
-        tools:layout_constraintLeft_creator="1" app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        <TextView
+            android:id="@+id/titleText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/Month"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_constraintLeft_creator="1"
+            tools:layout_constraintRight_creator="1"
+            tools:layout_constraintTop_creator="1" />
 
-    <Button
-        android:id="@+id/prevButton"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:text="@string/Prev"
-        android:background="@color/colorAccent"
-        tools:layout_constraintBottom_creator="1" android:layout_marginStart="16dp"
-        app:layout_constraintBottom_toBottomOf="parent" tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="2dp" app:layout_constraintLeft_toLeftOf="parent"/>
+        <Button
+            android:id="@+id/prevButton"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:layout_marginBottom="2dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="8dp"
+            android:background="@color/theme_main_PaleGray"
+            android:text="@string/Prev"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_constraintBottom_creator="1"
+            tools:layout_constraintLeft_creator="1" />
 
-    <Button
-        android:id="@+id/nextButton"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:text="@string/Next"
-        android:background="@color/colorAccent"
-        tools:layout_constraintRight_creator="1" tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="13dp"
-        app:layout_constraintRight_toRightOf="parent" android:layout_marginBottom="2dp"/>
+        <Button
+            android:id="@+id/nextButton"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:layout_marginBottom="2dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="8dp"
+            android:background="@color/theme_main_PaleGray"
+            android:text="@string/Next"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_constraintBottom_creator="1"
+            tools:layout_constraintRight_creator="1" />
 </android.support.constraint.ConstraintLayout>
 
 <LinearLayout
