--- a/app/src/main/res/layout/content_add_report.xml
+++ b/app/src/main/res/layout/content_add_report.xml
@@ -12,7 +12,7 @@
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
+            android:text="ここに選択した日の日報の一覧が出る"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
